// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align defaults to left 1`] = `
<td
  class="ouiTableRowCell"
>
  <div
    class="ouiTableCellContent"
  >
    <span
      class="ouiTableCellContent__text"
    />
  </div>
</td>
`;

exports[`align renders center when specified 1`] = `
<td
  class="ouiTableRowCell"
>
  <div
    class="ouiTableCellContent ouiTableCellContent--alignCenter"
  >
    <span
      class="ouiTableCellContent__text"
    />
  </div>
</td>
`;

exports[`align renders right when specified 1`] = `
<td
  class="ouiTableRowCell"
>
  <div
    class="ouiTableCellContent ouiTableCellContent--alignRight"
  >
    <span
      class="ouiTableCellContent__text"
    />
  </div>
</td>
`;

exports[`children's className merges new classnames into existing ones 1`] = `
<td
  class="ouiTableRowCell"
>
  <div
    class="ouiTableCellContent ouiTableCellContent--showOnHover ouiTableCellContent--overflowingContent"
  >
    <div
      class="testClass ouiTableCellContent__hoverItem"
    />
  </div>
</td>
`;

exports[`renders OuiTableRowCell 1`] = `
<td
  aria-label="aria-label"
  class="ouiTableRowCell"
  data-test-subj="test subject string"
>
  <div
    class="ouiTableCellContent testClass1 testClass2"
  >
    <span
      class="ouiTableCellContent__text"
    >
      children
    </span>
  </div>
</td>
`;

exports[`textOnly defaults to true 1`] = `
<td
  class="ouiTableRowCell"
>
  <div
    class="ouiTableCellContent"
  >
    <span
      class="ouiTableCellContent__text"
    />
  </div>
</td>
`;

exports[`textOnly is rendered when specified 1`] = `
<td
  class="ouiTableRowCell"
>
  <div
    class="ouiTableCellContent ouiTableCellContent--overflowingContent"
  />
</td>
`;

exports[`truncateText defaults to false 1`] = `
<td
  class="ouiTableRowCell"
>
  <div
    class="ouiTableCellContent"
  >
    <span
      class="ouiTableCellContent__text"
    />
  </div>
</td>
`;

exports[`truncateText is rendered when specified 1`] = `
<td
  class="ouiTableRowCell"
>
  <div
    class="ouiTableCellContent ouiTableCellContent--truncateText"
  >
    <span
      class="ouiTableCellContent__text"
    />
  </div>
</td>
`;

exports[`width and style accepts style attribute 1`] = `
<td
  class="ouiTableRowCell"
  style="width:20%"
>
  <div
    class="ouiTableCellContent"
  >
    <span
      class="ouiTableCellContent__text"
    >
      Test
    </span>
  </div>
</td>
`;

exports[`width and style accepts width attribute 1`] = `
<td
  class="ouiTableRowCell"
  style="width:10%"
>
  <div
    class="ouiTableCellContent"
  >
    <span
      class="ouiTableCellContent__text"
    >
      Test
    </span>
  </div>
</td>
`;

exports[`width and style accepts width attribute as number 1`] = `
<td
  class="ouiTableRowCell"
  style="width:100px"
>
  <div
    class="ouiTableCellContent"
  >
    <span
      class="ouiTableCellContent__text"
    >
      Test
    </span>
  </div>
</td>
`;

exports[`width and style resolves style and width attribute 1`] = `
<td
  class="ouiTableRowCell"
  style="width:10%"
>
  <div
    class="ouiTableCellContent"
  >
    <span
      class="ouiTableCellContent__text"
    >
      Test
    </span>
  </div>
</td>
`;
